--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Ahtesham Pc Booster License Key Generator</title>
-   <link rel="icon" type="image/png" href="LOGO.png">
+  <link rel="icon" type="image/png" href="LOGO.png">
   <style>
     html, body {
       margin: 0;
@@ -262,9 +262,22 @@
           return;
         }
 
-        const mins = Math.floor(remaining / 60000);
-        const secs = Math.floor((remaining % 60000) / 1000);
-        timeDiv.textContent = `⏳ Time left: ${mins}m ${secs}s`;
+        const totalSeconds = Math.floor(remaining / 1000);
+        const days = Math.floor(totalSeconds / 86400);
+        const hours = Math.floor((totalSeconds % 86400) / 3600);
+        const minutes = Math.floor((totalSeconds % 3600) / 60);
+        const seconds = totalSeconds % 60;
+
+        let timeStr = "⏳ Time left: ";
+        if (days > 0) {
+          timeStr += `${days}d ${hours}h ${minutes}m`;
+        } else if (hours > 0) {
+          timeStr += `${hours}h ${minutes}m`;
+        } else {
+          timeStr += `${minutes}m ${seconds}s`;
+        }
+
+        timeDiv.textContent = timeStr;
       }, 1000);
     }
   </script>
