--- a/index.html
+++ b/index.html
@@ -2,205 +2,114 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Ahtesham Pc Booster License Key Generator</title>
-  <link rel="icon" type="image/png" href="LOGO.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ahtesham Tech - License Key Generator</title>
   <style>
-    html, body {
+    body {
       margin: 0;
       padding: 0;
-      width: 100%;
-      height: 100%;
-      font-family: Arial, sans-serif;
-      background: radial-gradient(circle at top, #1f1f1f, #0d0d0d);
-      color: #fff;
-      text-align: center;
-      overflow: hidden;
-    }
-
-    #tsparticles {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-    }
-
-    .wrapper {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #0f0f0f;
+      color: #ffffff;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100%;
-      width: 100%;
-      position: relative;
-      z-index: 1;
+      min-height: 100vh;
+      text-align: center;
     }
 
-    .container {
-      background-color: #1a1a1a;
-      padding: 40px 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 25px rgba(0, 204, 255, 0.1), 0 0 5px rgba(255, 255, 255, 0.05);
-      max-width: 500px;
-      width: 90%;
-      animation: fadeIn 0.8s ease;
+    img {
+      width: 100px;
+      margin-bottom: 10px;
     }
 
     h1 {
-      font-size: 22px;
-      margin-bottom: 30px;
-      color: #58a6ff;
+      font-size: 24px;
+      margin-bottom: 20px;
+      color: #00ffc3;
     }
 
-    button {
-      padding: 12px 24px;
-      font-size: 16px;
-      margin: 10px 5px;
+    #key {
+      margin-top: 20px;
+      font-size: 18px;
+      color: #fff;
+      background: #1c1c1c;
+      padding: 12px 20px;
+      border-radius: 8px;
+      display: inline-block;
+      min-width: 250px;
+    }
+
+    #generate {
+      background: #00ffc3;
+      color: #000;
       border: none;
-      border-radius: 6px;
+      padding: 12px 24px;
+      border-radius: 8px;
       cursor: pointer;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      font-size: 16px;
+      margin-top: 20px;
+      transition: background 0.3s;
     }
 
-    button:hover:not(:disabled) {
-      transform: scale(1.05);
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
-    }
-
-    button:disabled {
-      background-color: #444;
+    #generate:disabled {
+      background: #555;
       cursor: not-allowed;
     }
 
-    #adBtn {
-      background-color: #fbbf24;
-      color: #000;
-    }
-
-    #genBtn {
-      background-color: #00d084;
-      color: #000;
-    }
-
-    #keyDisplay, #timeLeft, #copiedMessage {
-      margin-top: 20px;
-      font-size: 18px;
-      word-break: break-word;
-      animation: fadeIn 0.6s ease forwards;
-    }
-
-    #copiedMessage {
-      color: lime;
-      font-weight: bold;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+    #timer {
+      margin-top: 15px;
+      color: #aaa;
     }
   </style>
 </head>
 <body>
 
-  <!-- Particle background -->
-  <div id="tsparticles"></div>
+  <img src="logo.png" alt="Logo" />
+  <h1>Ahtesham Tech</h1>
 
-  <!-- Content wrapper -->
-  <div class="wrapper">
-    <div class="container">
-      <h1>🔐 Ahtesham Pc Booster License Key Generator</h1>
+  <div id="key">Click below to generate a key</div>
 
-      <button id="adBtn" onclick="goToAd()">Step 1: Complete Ad</button>
-      <button id="genBtn" onclick="requestLicense()" disabled>Step 2: Generate License Key</button>
+  <button id="generate">Generate Key</button>
 
-      <div id="keyDisplay"></div>
-      <div id="copiedMessage"></div>
-      <div id="timeLeft" style="color: #ccc;"></div>
-    </div>
-  </div>
+  <div id="timer"></div>
 
-  <!-- tsParticles CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/tsparticles@3.0.3/tsparticles.bundle.min.js"></script>
-
-  <!-- tsParticles config -->
   <script>
-    tsParticles.load("tsparticles", {
-      fullScreen: {
-        enable: false
-      },
-      background: {
-        color: "#0d0d0d"
-      },
-      particles: {
-        number: {
-          value: 70,
-          density: { enable: true, area: 800 }
-        },
-        color: { value: "#00ffff" },
-        shape: { type: "circle" },
-        opacity: { value: 0.4 },
-        size: { value: { min: 1, max: 3 } },
-        move: {
-          enable: true,
-          speed: 1,
-          outModes: { default: "out" }
-        }
-      }
-    });
-  </script>
+    const genBtn = document.getElementById("generate");
+    const keyDiv = document.getElementById("key");
+    const timerDiv = document.getElementById("timer");
 
-  <!-- License Key Script -->
-  <script>
-    const adLink = "https://shrinkme.ink/Ahtesham_PC_Booster_Key_Gen";
+    const displayKey = (key, expiry) => {
+      keyDiv.textContent = "🔑 " + key;
 
-    function goToAd() {
-      localStorage.setItem("adCompleteReady", "true");
-      localStorage.setItem("keyUsedOnce", "false");
-      window.open(adLink, "_blank");
-      setTimeout(enableGenerateIfAllowed, 1000);
-    }
-
-    function enableGenerateIfAllowed() {
-      const adReady = localStorage.getItem("adCompleteReady") === "true";
-      const usedOnce = localStorage.getItem("keyUsedOnce") === "true";
-      const expiry = parseInt(localStorage.getItem("expiry") || "0");
-      const now = Date.now();
-
-      if (adReady && !usedOnce) {
-        document.getElementById("genBtn").disabled = false;
-      } else if (now > expiry) {
-        document.getElementById("genBtn").disabled = true;
-        localStorage.removeItem("adCompleteReady");
-        localStorage.removeItem("keyUsedOnce");
-      }
-    }
-
-    window.onload = function () {
-      const savedKey = localStorage.getItem("key");
-      const expiry = parseInt(localStorage.getItem("expiry") || "0");
-      const now = Date.now();
-
-      if (savedKey && expiry > now) {
-        displayKey(savedKey, expiry);
-      } else {
-        localStorage.removeItem("key");
-        localStorage.removeItem("expiry");
-        enableGenerateIfAllowed();
-      }
+      const remaining = expiry - Date.now();
+      if (remaining > 0) startCountdown(remaining);
     };
 
-    let timerInterval;
-
-    async function requestLicense() {
-      const keyDiv = document.getElementById("keyDisplay");
-      const timeDiv = document.getElementById("timeLeft");
-      const copiedMsg = document.getElementById("copiedMessage");
-      const genBtn = document.getElementById("genBtn");
-
-      keyDiv.textContent = "⌛ Generating key...";
-      timeDiv.textContent = "";
-      copiedMsg.textContent = "";
+    const startCountdown = (ms) => {
       genBtn.disabled = true;
+
+      const interval = setInterval(() => {
+        const remaining = Math.floor((localStorage.getItem("expiry") - Date.now()) / 1000);
+        if (remaining <= 0) {
+          clearInterval(interval);
+          timerDiv.textContent = "";
+          genBtn.disabled = false;
+          genBtn.textContent = "Generate Key";
+          return;
+        }
+
+        const minutes = Math.floor(remaining / 60);
+        const seconds = remaining % 60;
+        timerDiv.textContent = `⏳ Next key in: ${minutes}m ${seconds}s`;
+        genBtn.textContent = "Please wait...";
+      }, 1000);
+    };
+
+    const requestLicense = async () => {
+      genBtn.disabled = true;
+      genBtn.textContent = "Please wait...";
 
       try {
         const res = await fetch("https://license-api-zut2.onrender.com/addlicense", {
@@ -209,10 +118,9 @@
           body: JSON.stringify({ generate: true })
         });
 
-        const data = await res.json();
+        const key = await res.text();
 
-        if (data.success && data.licenseKey) {
-          const key = data.licenseKey;
+        if (key && key.includes("--EXP-")) {
           const match = key.match(/--EXP-(\d+)/);
           if (!match) throw new Error("Invalid expiry format");
 
@@ -224,63 +132,38 @@
 
           displayKey(key, expiry);
         } else {
-          throw new Error("Invalid response");
+          throw new Error("Invalid key format");
         }
+
       } catch (err) {
         console.error(err);
         keyDiv.textContent = "❌ Failed to generate key.";
         genBtn.disabled = false;
+        genBtn.textContent = "Generate Key";
       }
-    }
+    };
 
-    function displayKey(key, expiry) {
-      const keyDiv = document.getElementById("keyDisplay");
-      const timeDiv = document.getElementById("timeLeft");
-      const copiedMsg = document.getElementById("copiedMessage");
-      const genBtn = document.getElementById("genBtn");
+    // Handle key reuse + expiry
+    window.onload = () => {
+      const key = localStorage.getItem("key");
+      const expiry = localStorage.getItem("expiry");
 
-      keyDiv.textContent = `✅ Your License Key:\n${key}`;
-      navigator.clipboard.writeText(key);
-      copiedMsg.textContent = "📋 Copied to clipboard!";
-      genBtn.disabled = true;
-      genBtn.textContent = "Key Generated ✅";
-
-      clearInterval(timerInterval);
-      timerInterval = setInterval(() => {
-        const now = Date.now();
-        const remaining = expiry - now;
-
-        if (remaining <= 0) {
-          clearInterval(timerInterval);
+      if (key && expiry) {
+        const exp = parseInt(expiry);
+        if (Date.now() < exp) {
+          displayKey(key, exp);
+          genBtn.disabled = true;
+        } else {
           localStorage.removeItem("key");
           localStorage.removeItem("expiry");
-          localStorage.removeItem("keyUsedOnce");
-          localStorage.removeItem("adCompleteReady");
-          timeDiv.textContent = "⛔ License expired! Go through ad again.";
-          genBtn.disabled = true;
-          genBtn.textContent = "Step 2: Generate License Key";
-          return;
+          genBtn.disabled = false;
         }
+      }
+    };
 
-        const totalSeconds = Math.floor(remaining / 1000);
-        const days = Math.floor(totalSeconds / 86400);
-        const hours = Math.floor((totalSeconds % 86400) / 3600);
-        const minutes = Math.floor((totalSeconds % 3600) / 60);
-        const seconds = totalSeconds % 60;
-
-        let timeStr = "⏳ Time left: ";
-        if (days > 0) {
-          timeStr += `${days}d ${hours}h ${minutes}m`;
-        } else if (hours > 0) {
-          timeStr += `${hours}h ${minutes}m`;
-        } else {
-          timeStr += `${minutes}m ${seconds}s`;
-        }
-
-        timeDiv.textContent = timeStr;
-      }, 1000);
-    }
+    genBtn.addEventListener("click", () => {
+      requestLicense();
+    });
   </script>
-
 </body>
 </html>
