--- a/index.html
+++ b/index.html
@@ -65,64 +65,85 @@
 
   <div id="key"></div>
 
-  <script>
-    const keyDiv = document.getElementById("key");
-    const genBtn = document.getElementById("generateBtn");
+<script>
+  const keyDiv = document.getElementById("key");
+  const genBtn = document.getElementById("generateBtn");
 
-    const displayKey = (key, expiry) => {
-      const date = new Date(expiry);
-      keyDiv.textContent = `✅ License Key: ${key}\n\n⏳ Expires on: ${date.toLocaleString()}`;
-      genBtn.disabled = true;
-      genBtn.textContent = "Key Generated";
-    };
+  const displayKey = (key, expiry) => {
+    const updateCountdown = () => {
+      const now = Date.now();
+      const timeLeft = expiry - now;
 
-    const requestLicense = async () => {
-      genBtn.disabled = true;
-      genBtn.textContent = "Please wait...";
-
-      try {
-        const res = await fetch("https://license-api-zut2.onrender.com/addlicense", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ generate: true })
-        });
-
-        const data = await res.json();
-        const key = data.licenseKey;
-
-        if (data.success && key && key.includes("--EXP-")) {
-          const match = key.match(/--EXP-(\d+)/);
-          if (!match) throw new Error("Invalid expiry format");
-
-          const expiry = parseInt(match[1]) * 1000;
-
-          localStorage.setItem("key", key);
-          localStorage.setItem("expiry", expiry);
-          localStorage.setItem("keyUsedOnce", "true");
-
-          displayKey(key, expiry);
-        } else {
-          throw new Error("Invalid key format");
-        }
-
-      } catch (err) {
-        console.error(err);
-        keyDiv.textContent = "❌ Failed to generate key.";
+      if (timeLeft <= 0) {
+        keyDiv.textContent = "❌ License expired. Please generate again.";
+        localStorage.removeItem("key");
+        localStorage.removeItem("expiry");
         genBtn.disabled = false;
         genBtn.textContent = "Generate License Key";
+        clearInterval(timer);
+        return;
       }
+
+      const days = Math.floor(timeLeft / (1000 * 60 * 60 * 24));
+      const hours = Math.floor((timeLeft / (1000 * 60 * 60)) % 24);
+      const minutes = Math.floor((timeLeft / (1000 * 60)) % 60);
+      const seconds = Math.floor((timeLeft / 1000) % 60);
+
+      keyDiv.textContent = `✅ License Key: ${key}\n\n⏳ Expires in: ${days}d ${hours}h ${minutes}m ${seconds}s`;
     };
 
-    genBtn.addEventListener("click", requestLicense);
+    updateCountdown();
+    const timer = setInterval(updateCountdown, 1000);
 
-    // Load key if already generated and valid
-    const savedKey = localStorage.getItem("key");
-    const savedExpiry = parseInt(localStorage.getItem("expiry"));
+    genBtn.disabled = true;
+    genBtn.textContent = "Key Generated";
+  };
 
-    if (savedKey && savedExpiry && savedExpiry > Date.now()) {
-      displayKey(savedKey, savedExpiry);
+  const requestLicense = async () => {
+    genBtn.disabled = true;
+    genBtn.textContent = "Please wait...";
+
+    try {
+      const res = await fetch("https://license-api-zut2.onrender.com/addlicense", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ generate: true })
+      });
+
+      const data = await res.json();
+      const key = data.licenseKey;
+
+      if (data.success && key && key.includes("--EXP-")) {
+        const match = key.match(/--EXP-(\d+)/);
+        if (!match) throw new Error("Invalid expiry format");
+
+        const expiry = parseInt(match[1]) * 1000;
+
+        localStorage.setItem("key", key);
+        localStorage.setItem("expiry", expiry);
+        displayKey(key, expiry);
+      } else {
+        throw new Error("Invalid key format");
+      }
+
+    } catch (err) {
+      console.error(err);
+      keyDiv.textContent = "❌ Failed to generate key.";
+      genBtn.disabled = false;
+      genBtn.textContent = "Generate License Key";
     }
-  </script>
+  };
+
+  genBtn.addEventListener("click", requestLicense);
+
+  const savedKey = localStorage.getItem("key");
+  const savedExpiry = parseInt(localStorage.getItem("expiry"));
+
+  if (savedKey && savedExpiry && savedExpiry > Date.now()) {
+    displayKey(savedKey, savedExpiry);
+  }
+</script>
+
 
 </body>
 </html>
