--- a/index.html
+++ b/index.html
@@ -1,149 +1,261 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Ahtesham Key Generator</title>
+  <meta charset="UTF-8" />
+  <title>Ahtesham Pc Booster License Key Generator</title>
+  <link rel="icon" type="image/png" href="LOGO.png">
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #101010;
-      color: white;
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      font-family: Arial, sans-serif;
+      background: radial-gradient(circle at top, #1f1f1f, #0d0d0d);
+      color: #fff;
+      text-align: center;
+      overflow: hidden;
+    }
+
+    #tsparticles {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+
+    .wrapper {
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
-      margin: 0;
-      padding: 20px;
+      height: 100%;
+      width: 100%;
+      position: relative;
+      z-index: 1;
+    }
+
+    .container {
+      background-color: #1a1a1a;
+      padding: 40px 30px;
+      border-radius: 12px;
+      box-shadow: 0 0 25px rgba(0, 204, 255, 0.1), 0 0 5px rgba(255, 255, 255, 0.05);
+      max-width: 500px;
+      width: 90%;
+      animation: fadeIn 0.8s ease;
     }
 
     h1 {
-      color: #00ffe1;
-      font-size: 28px;
+      font-size: 22px;
       margin-bottom: 30px;
+      color: #58a6ff;
     }
 
     button {
-      background-color: #00ffe1;
-      color: black;
-      border: none;
       padding: 12px 24px;
-      margin: 10px;
       font-size: 16px;
-      cursor: pointer;
+      margin: 10px 5px;
+      border: none;
       border-radius: 6px;
-      transition: background 0.3s;
+      cursor: pointer;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
 
-    button:hover {
-      background-color: #00cbb7;
+    button:hover:not(:disabled) {
+      transform: scale(1.05);
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
     }
 
-    #key {
-      margin-top: 30px;
+    button:disabled {
+      background-color: #444;
+      cursor: not-allowed;
+    }
+
+    #adBtn {
+      background-color: #fbbf24;
+      color: #000;
+    }
+
+    #genBtn {
+      background-color: #00d084;
+      color: #000;
+    }
+
+    #keyDisplay, #timeLeft, #copiedMessage {
+      margin-top: 20px;
       font-size: 18px;
-      word-wrap: break-word;
-      text-align: center;
+      word-break: break-word;
+      animation: fadeIn 0.6s ease forwards;
     }
 
-    .btn-group {
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
+    #copiedMessage {
+      color: lime;
+      font-weight: bold;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
 
-  <h1>🛡️ Ahtesham Tech - License Key</h1>
+  <!-- Particle background -->
+  <div id="tsparticles"></div>
 
-  <div class="btn-group">
-    <button disabled>✔️ Step 1 Complete</button>
-    <button id="generateBtn">🎯 Generate License Key</button>
+  <!-- Content wrapper -->
+  <div class="wrapper">
+    <div class="container">
+      <h1>🔐 Ahtesham Pc Booster License Key Generator</h1>
+
+      <button id="adBtn" onclick="goToAd()">Step 1: Complete Ad</button>
+      <button id="genBtn" onclick="requestLicense()" disabled>Step 2: Generate License Key</button>
+
+      <div id="keyDisplay"></div>
+      <div id="copiedMessage"></div>
+      <div id="timeLeft" style="color: #ccc;"></div>
+    </div>
   </div>
 
-  <div id="key"></div>
+  <!-- tsParticles CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/tsparticles@3.0.3/tsparticles.bundle.min.js"></script>
 
-<script>
-  const keyDiv = document.getElementById("key");
-  const genBtn = document.getElementById("generateBtn");
+  <!-- tsParticles config -->
+  <script>
+    tsParticles.load("tsparticles", {
+      fullScreen: { enable: false },
+      background: { color: "#0d0d0d" },
+      particles: {
+        number: { value: 70, density: { enable: true, area: 800 } },
+        color: { value: "#00ffff" },
+        shape: { type: "circle" },
+        opacity: { value: 0.4 },
+        size: { value: { min: 1, max: 3 } },
+        move: { enable: true, speed: 1, outModes: { default: "out" } }
+      }
+    });
+  </script>
 
-  const displayKey = (key, expiry) => {
-    const updateCountdown = () => {
+  <!-- License Key Script -->
+  <script>
+    const adLink = "https://shrinkme.ink/Ahtesham_PC_Booster_Key_Gen";
+    let timerInterval;
+
+    function goToAd() {
+      localStorage.setItem("adCompleteReady", "true");
+      localStorage.setItem("keyUsedOnce", "false");
+      window.open(adLink, "_blank");
+      setTimeout(enableGenerateIfAllowed, 1000);
+    }
+
+    function enableGenerateIfAllowed() {
+      const adReady = localStorage.getItem("adCompleteReady") === "true";
+      const usedOnce = localStorage.getItem("keyUsedOnce") === "true";
+      const expiry = parseInt(localStorage.getItem("expiry") || "0");
       const now = Date.now();
-      const timeLeft = expiry - now;
 
-      if (timeLeft <= 0) {
-        keyDiv.textContent = "❌ License expired. Please generate again.";
+      if (adReady && !usedOnce) {
+        document.getElementById("genBtn").disabled = false;
+      } else if (now > expiry) {
+        document.getElementById("genBtn").disabled = true;
+        localStorage.removeItem("adCompleteReady");
+        localStorage.removeItem("keyUsedOnce");
+      }
+    }
+
+    window.onload = function () {
+      const savedKey = localStorage.getItem("key");
+      const expiry = parseInt(localStorage.getItem("expiry") || "0");
+
+      if (savedKey && expiry > Date.now()) {
+        displayKey(savedKey, expiry);
+      } else {
         localStorage.removeItem("key");
         localStorage.removeItem("expiry");
-        genBtn.disabled = false;
-        genBtn.textContent = "Generate License Key";
-        clearInterval(timer);
-        return;
+        enableGenerateIfAllowed();
       }
-
-      const days = Math.floor(timeLeft / (1000 * 60 * 60 * 24));
-      const hours = Math.floor((timeLeft / (1000 * 60 * 60)) % 24);
-      const minutes = Math.floor((timeLeft / (1000 * 60)) % 60);
-      const seconds = Math.floor((timeLeft / 1000) % 60);
-
-      keyDiv.textContent = `✅ License Key: ${key}\n\n⏳ Expires in: ${days}d ${hours}h ${minutes}m ${seconds}s`;
     };
 
-    updateCountdown();
-    const timer = setInterval(updateCountdown, 1000);
+    async function requestLicense() {
+      const keyDiv = document.getElementById("keyDisplay");
+      const timeDiv = document.getElementById("timeLeft");
+      const copiedMsg = document.getElementById("copiedMessage");
+      const genBtn = document.getElementById("genBtn");
 
-    genBtn.disabled = true;
-    genBtn.textContent = "Key Generated";
-  };
+      keyDiv.textContent = "⌛ Generating key...";
+      timeDiv.textContent = "";
+      copiedMsg.textContent = "";
+      genBtn.disabled = true;
 
-  const requestLicense = async () => {
-    genBtn.disabled = true;
-    genBtn.textContent = "Please wait...";
+      try {
+        const res = await fetch("https://license-api-zut2.onrender.com/addlicense", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ generate: true })
+        });
 
-    try {
-      const res = await fetch("https://license-api-zut2.onrender.com/addlicense", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ generate: true })
-      });
+        const data = await res.json();
 
-      const data = await res.json();
-      const key = data.licenseKey;
+        if (data.success && data.licenseKey) {
+          const key = data.licenseKey;
+          const match = key.match(/--EXP-(\d+)/);
+          if (!match) throw new Error("Invalid expiry format");
 
-      if (data.success && key && key.includes("--EXP-")) {
-        const match = key.match(/--EXP-(\d+)/);
-        if (!match) throw new Error("Invalid expiry format");
+          const expiry = parseInt(match[1]) * 1000;
 
-        const expiry = parseInt(match[1]) * 1000;
+          localStorage.setItem("key", key);
+          localStorage.setItem("expiry", expiry);
+          localStorage.setItem("keyUsedOnce", "true");
 
-        localStorage.setItem("key", key);
-        localStorage.setItem("expiry", expiry);
-        displayKey(key, expiry);
-      } else {
-        throw new Error("Invalid key format");
+          displayKey(key, expiry);
+        } else {
+          throw new Error("Invalid response");
+        }
+      } catch (err) {
+        console.error(err);
+        keyDiv.textContent = "❌ Failed to generate key.";
+        genBtn.disabled = false;
       }
-
-    } catch (err) {
-      console.error(err);
-      keyDiv.textContent = "❌ Failed to generate key.";
-      genBtn.disabled = false;
-      genBtn.textContent = "Generate License Key";
     }
-  };
 
-  genBtn.addEventListener("click", requestLicense);
+    function displayKey(key, expiry) {
+      const keyDiv = document.getElementById("keyDisplay");
+      const timeDiv = document.getElementById("timeLeft");
+      const copiedMsg = document.getElementById("copiedMessage");
+      const genBtn = document.getElementById("genBtn");
 
-  const savedKey = localStorage.getItem("key");
-  const savedExpiry = parseInt(localStorage.getItem("expiry"));
+      keyDiv.textContent = `✅ Your License Key:\n${key}`;
+      navigator.clipboard.writeText(key);
+      copiedMsg.textContent = "📋 Copied to clipboard!";
+      genBtn.disabled = true;
+      genBtn.textContent = "Key Generated ✅";
 
-  if (savedKey && savedExpiry && savedExpiry > Date.now()) {
-    displayKey(savedKey, savedExpiry);
-  }
-</script>
+      clearInterval(timerInterval);
+      timerInterval = setInterval(() => {
+        const now = Date.now();
+        const remaining = expiry - now;
 
+        if (remaining <= 0) {
+          clearInterval(timerInterval);
+          localStorage.clear();
+          timeDiv.textContent = "⛔ License expired! Go through ad again.";
+          genBtn.disabled = true;
+          genBtn.textContent = "Step 2: Generate License Key";
+          return;
+        }
+
+        const totalSeconds = Math.floor(remaining / 1000);
+        const days = Math.floor(totalSeconds / 86400);
+        const hours = Math.floor((totalSeconds % 86400) / 3600);
+        const minutes = Math.floor((totalSeconds % 3600) / 60);
+        const seconds = totalSeconds % 60;
+
+        timeDiv.textContent = `⏳ Time left: ${days}d ${hours}h ${minutes}m ${seconds}s`;
+      }, 1000);
+    }
+  </script>
 
 </body>
 </html>
