--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Ahtesham Pc Booster License Key Generator</title>
+  <title>Ahtesham Tech - Pc Booster License Key Generator</title>
   <link rel="icon" type="image/png" href="LOGO.png">
   <style>
     html, body {
@@ -78,7 +78,7 @@
 <body>
 
   <div class="container">
-    <h1>🔐 Ahtesham Pc Booster License Key Generator</h1>
+    <h1>🔐 Ahtesham Tech - Pc Booster License Key Generator</h1>
     <button id="genBtn" onclick="requestLicense()">Generate License Key</button>
     <div id="keyDisplay"></div>
     <div id="copiedMessage"></div>
@@ -107,7 +107,7 @@
       const copiedMsg = document.getElementById("copiedMessage");
       const genBtn = document.getElementById("genBtn");
 
-      keyDiv.textContent = "⌛ Generating key...";
+      keyDiv.textContent = "⌛ Generating key.. Ruko Zara Sabar Karo.... XD";
       timeDiv.textContent = "";
       copiedMsg.textContent = "";
       genBtn.disabled = true;
